# landing-page-in-django

./: .gitattributes  .gitignore  .prettierignore  Procfile  README.md  __init__.py  app.py  build.sh  check.sh  ci.env  collectstatic.sh  dev.sh  generate-key.sh  gunicorn.conf.py  landing-page-in-django.code-workspace  main.py  manage.py  package.json  pyproject.toml  ruff.toml  test.sh  vercel.json
.github/workflows/: collectstatic.yaml  test.yaml
backend/: env_utils.py  urls.py
backend/settings/: __init__.py  base.py  local.py  production.py  tests.py
landing/: apps.py  forms.py  tests.py  views.py
